MOBILE-4470 styles: Fix opacity on iOS

--- a/src/theme/components/ion-radio.scss
+++ b/src/theme/components/ion-radio.scss
@@ -57,7 +57,8 @@ input[type=radio],
 }
 
 ion-radio {
-    &.radio-disabled::part(label) {
+    &.md.radio-disabled::part(label),
+    &.ios.radio-disabled {
         opacity: var(--mdl-input-disabled-opacity);
     }
 }
